corrected overlap below 450px

--- a/src/styles/portStyle.sass
+++ b/src/styles/portStyle.sass
@@ -22,8 +22,9 @@ a
     margin-top: -20px
     text-align: center
   .port-img
-    margin-top: -150px
+    margin-top: -170px
     margin: 0 auto
+    padding-top: 25px
     width: 290px
     float: none
     img
